# fullstack/server/Application/Models/Dtos/Service/ServiceCreateRequestDto.cs
@@ -1,0 +1,8 @@
+using System.ComponentModel.DataAnnotations;
+
+namespace Application.Models.Dtos.Service;
+
+public class ServiceCreateRequestDto
+{
+    [Required] public string Name { get; set; } = null!;
+}
