# fullstack/server/Application/Models/Dtos/Service/ServiceResponseDto.cs
@@ -1,0 +1,8 @@
+using System.ComponentModel.DataAnnotations;
+
+namespace Application.Models.Dtos.Service;
+
+public class ServiceResponseDto
+{ 
+    [Required] public string Message { get; set; } = null!;
+}
